# comfyui-mask-editor-one

./: .gitignore  DEVLOG.md  LICENSE  README.md  README_en.md  README_zh.md  __init__.py  abr_parser.py  birefnet_inference.py  nodes.py  pyproject.toml  requirements.txt  sam3_inference.py  server.py
.github/workflows/: publish_action.yml
web/css/: maskEditor.css
web/js/: maskEditor.js
web/js/editor/: BrushLibrary.js  CanvasCompositor.js  LayerManager.js  MaskEditorModal.js  i18n.js  nodeState.js
web/js/editor/tools/: BaseTool.js  BiRefNetTool.js  ColorTool.js  PaintTool.js  Sam3Tool.js  ShapeTool.js  TextTool.js  TransparencyTool.js  VectorTool.js
