[project]
name = "comfyui-mask-editor-one"
description = "An advanced mask editor node for ComfyUI featuring brush tools, SAM3 segmentation, and ABR brush library support."
version = "0.1.2"

[project.urls]
Repository = "https://github.com/ketle-man/comfyui-mask-editor-one"

[tool.comfy]
PublisherId = "statsu"
DisplayName = "Mask Editor One"
Icon = "https://raw.githubusercontent.com/ketle-man/comfyui-mask-editor-one/master/docs/thumb.png"
